--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
